EngineCore/include/EngineAPI.h

	/* ── opaque handle ─────────────────────────────────────────── */
	typedef void* EngineContextHandle;
	/* ── entity handle ─────────────────────────────────────────── */
	typedef struct EntityId { uint32_t id; } EntityId;
	/// Standard render layers - use custom values between these for fine control
	typedef enum {
		RENDER_LAYER_BACKGROUND = -1000,  ///< Clear operations, skybox  
		RENDER_LAYER_TERRAIN = 0,      ///< Ground tiles, background elements
		RENDER_LAYER_ENTITIES = 100,    ///< Game objects, sprites, characters
		RENDER_LAYER_EFFECTS = 200,    ///< Particles, visual effects  
		RENDER_LAYER_UI = 1000,   ///< User interface elements
		RENDER_LAYER_DEBUG = 2000,   ///< Debug overlays, gizmos
		RENDER_LAYER_POST_PROCESS = 3000   ///< Screen effects, filters
	} RenderLayer;
	//=============================================================================
	// RENDER PIPELINE API
	//=============================================================================

	/// Submit a sprite for rendering at the specified layer and order
	ENGINE_API void Render_SubmitSprite(
		EngineContextHandle ctx,
		uint32_t textureID,
		float posX, float posY,        ///< World position (center)
		float sizeX, float sizeY,      ///< World size
		float rotation,                ///< Rotation in radians
		float colorR, float colorG, float colorB,  ///< Tint color
		float uvOffsetX, float uvOffsetY,          ///< UV offset
		float uvSizeX, float uvSizeY,              ///< UV size
		int layer,                     ///< Render layer (use RenderLayer enum values)
		int order                      ///< Order within layer (lower = earlier)
	);
	/// Submit a custom rendering callback at the specified layer
	ENGINE_API void Render_SubmitCustom(
		EngineContextHandle ctx,
		void (*callback)(void* userData),  ///< Custom render function
		void* userData,                    ///< User data passed to callback
		int layer,                         ///< Render layer
		int order                          ///< Order within layer
	);
	//=============================================================================
	// SCRIPT DATA API
	//=============================================================================

	ENGINE_API int GetScriptDataValue(EngineContextHandle ctx, EntityId e, const char* key, char* outJson, int outSize);
	ENGINE_API int SetScriptDataValue(EngineContextHandle ctx, EntityId e, const char* key, const char* json);
	ENGINE_API int RemoveScriptDataValue(EngineContextHandle ctx, EntityId e, const char* key);
	//=============================================================================
	// PREFAB SYSTEM API
	//=============================================================================

	ENGINE_API EntityId Prefab_InstantiateAtTile(EngineContextHandle ctx, const char* prefab, int tx, int ty);
	ENGINE_API EntityId InstantiatePrefab(EngineContextHandle ctx, const char* prefab, float wx, float wy);
	//=============================================================================
	// EVENT SYSTEM API
	//=============================================================================

	typedef void (*ScriptEventCallback)(const char* evt, const void* payload, int size, void* user);
	ENGINE_API void Script_SubscribeEvent(EngineContextHandle ctx, const char* evt, ScriptEventCallback cb, void* user);
	ENGINE_API void Script_PublishEvent(EngineContextHandle ctx, const char* evt, const void* payload, int size);
	//=============================================================================
	// CAMERA API
	//=============================================================================

	ENGINE_API void Engine_SetPlayerEntity(EngineContextHandle ctx, EntityId player);
	ENGINE_API void Engine_SetCameraTarget(EngineContextHandle ctx, EntityId target);
	ENGINE_API void Engine_ClearCameraTarget(EngineContextHandle ctx);
	ENGINE_API void Engine_SetCameraPosition(EngineContextHandle ctx, float wx, float wy);
	//=============================================================================
	// OVERLAY RENDERING API
	//=============================================================================

	ENGINE_API void Engine_OverlayClear(EngineContextHandle ctx);
	ENGINE_API void Engine_OverlayRect(EngineContextHandle ctx, float wx, float wy, float w, float h, uint32_t colourRGBA);
	ENGINE_API void Engine_OverlayPresent(void);
	//=============================================================================
	// PATHFINDING API
	//=============================================================================

	ENGINE_API char* Engine_FindPath(
		EngineContextHandle h,
		int startX, int startY,
		int targetX, int targetY,
		int maxRange
	);
	ENGINE_API char* Engine_FindPathAdvanced(
		EngineContextHandle h,
		int startX, int startY,
		int targetX, int targetY,
		int maxRange,
		EntityId tilemapLayer
	);
	ENGINE_API void Engine_FreeString(char* str);
	//=============================================================================
	// SCENE MANAGEMENT API
	//=============================================================================

	ENGINE_API void SceneManager_SaveScene(EngineContextHandle wrapperHandle, const char* path);
	ENGINE_API bool SceneManager_LoadScene(
		EngineContextHandle wrapperHandle,
		const char* path,
		uint32_t* outPlayer,
		float* outPlayerX,
		float* outPlayerY,
		uint32_t* outMainTilemap
	);
	ENGINE_API bool SceneManager_LoadTilemap(
		EngineContextHandle wrapperHandle,
		const char* path,
		float positionX,
		float positionY,
		uint32_t* outTilemap
	);
	ENGINE_API bool SceneManager_SaveTilemap(
		EngineContextHandle wrapperHandle,
		const char* path,
		uint32_t tilemapEntity
	);
	ENGINE_API int SceneManager_GetSupportedFormatsCount(
		EngineContextHandle wrapperHandle,
		bool forLoading
	);
	//=============================================================================
	// SCENE HIERARCHY API
	//=============================================================================

	ENGINE_API EntityId SceneHierarchy_CreateGameObject(
		EngineContextHandle ctx,
		const char* name,
		EntityId parent  ///< Pass {WS_INVALID_ENTITY} for root object
	);
	ENGINE_API int SceneHierarchy_SetParent(
		EngineContextHandle ctx,
		EntityId child,
		EntityId parent  ///< Pass {WS_INVALID_ENTITY} to make root object
	);
	ENGINE_API int SceneHierarchy_GetChildren(
		EngineContextHandle ctx,
		EntityId parent,
		uint32_t* outChildren,
		int maxCount
	);
	ENGINE_API EntityId SceneHierarchy_GetParent(
		EngineContextHandle ctx,
		EntityId child
	);
	ENGINE_API int SceneHierarchy_GetRootObjects(
		EngineContextHandle ctx,
		uint32_t* outRoots,
		int maxCount
	);
	//=============================================================================
	// SELECTION API
	//=============================================================================

	ENGINE_API void Selection_SelectEntity(EngineContextHandle ctx, EntityId entity);
	ENGINE_API void Selection_AddToSelection(EngineContextHandle ctx, EntityId entity);
	ENGINE_API void Selection_DeselectAll(EngineContextHandle ctx);
	ENGINE_API int Selection_GetSelectedEntities(
		EngineContextHandle ctx,
		uint32_t* outEntities,
		int maxCount
	);
	ENGINE_API int Selection_SelectInBounds(
		EngineContextHandle ctx,
		float minX, float minY,
		float maxX, float maxY
	);
	//=============================================================================
	// LAYER MANAGEMENT API
	//=============================================================================

	ENGINE_API int Layer_Create(EngineContextHandle ctx, const char* name);
	ENGINE_API void Layer_Remove(EngineContextHandle ctx, int layerId);
	ENGINE_API void Layer_SetVisible(EngineContextHandle ctx, int layerId, int visible);
	ENGINE_API void Layer_SetEntityLayer(EngineContextHandle ctx, EntityId entity, int layerId);
	ENGINE_API int Layer_GetEntityLayer(EngineContextHandle ctx, EntityId entity);
	//=============================================================================
	// COMMAND SYSTEM API
	//=============================================================================

	ENGINE_API void Command_Execute(EngineContextHandle ctx, const char* commandJson);
	ENGINE_API int Command_Undo(EngineContextHandle ctx);
	ENGINE_API int Command_Redo(EngineContextHandle ctx);
	ENGINE_API int Command_CanUndo(EngineContextHandle ctx);
	ENGINE_API int Command_CanRedo(EngineContextHandle ctx);
	ENGINE_API int Command_GetUndoDescription(
		EngineContextHandle ctx,
		char* outDescription,
		int bufferSize
	);
	ENGINE_API int Command_GetRedoDescription(
		EngineContextHandle ctx,
		char* outDescription,
		int bufferSize
	);
	ENGINE_API int Command_GetHistorySize(EngineContextHandle ctx);
	ENGINE_API void Command_SetMaxHistorySize(EngineContextHandle ctx, int maxSize);
	ENGINE_API void Command_ClearHistory(EngineContextHandle ctx);
	ENGINE_API void Command_MoveSelection(
		EngineContextHandle ctx,
		float deltaX, float deltaY
	);
	ENGINE_API void Command_DeleteSelection(EngineContextHandle ctx);
	//=============================================================================
	// GRID OPERATIONS API
	//=============================================================================

	ENGINE_API void Grid_SnapPosition(
		EngineContextHandle ctx,
		float inX, float inY,
		float* outX, float* outY
	);
	ENGINE_API float Grid_GetTileSize(EngineContextHandle ctx);
	//=============================================================================
	// COORDINATE CONVERSION API
	//=============================================================================

	ENGINE_API void Coord_WorldToTile(
		EngineContextHandle ctx,
		float worldX, float worldY,
		int* outTileX, int* outTileY
	);
	ENGINE_API void Coord_TileToWorld(
		EngineContextHandle ctx,
		int tileX, int tileY,
		float* outWorldX, float* outWorldY
	);
	ENGINE_API float Coord_GetTileSize(EngineContextHandle ctx);
	ENGINE_API void Coord_SetTileSize(EngineContextHandle ctx, float tileSize);
	ENGINE_API void Engine_RunInContext(void (*fn)(void*), void* user);