CSharp/ScriptHost/Interop/EngineInterop.cs


        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetScriptDataValue(
            IntPtr ctx, EntityId eid,
            [MarshalAs(UnmanagedType.LPStr)] string key,
            [Out] byte[] outJson, int outJsonSize);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetScriptDataValue(
            IntPtr ctx, EntityId eid,
            [MarshalAs(UnmanagedType.LPStr)] string key,
            [MarshalAs(UnmanagedType.LPStr)] string jsonValue);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int RemoveScriptDataValue(
            IntPtr ctx, EntityId eid,
            [MarshalAs(UnmanagedType.LPStr)] string key);

        #endregion

        #region Prefab System API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern EntityId Prefab_InstantiateAtTile(
            IntPtr ctx,
            [MarshalAs(UnmanagedType.LPStr)] string prefabName,
            int tileX, int tileY);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern EntityId InstantiatePrefab(
            IntPtr ctx,
            [MarshalAs(UnmanagedType.LPStr)] string prefabName,
            float worldX, float worldY);

        #endregion

        #region Event System API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Script_SubscribeEvent(
            IntPtr ctx,
            [MarshalAs(UnmanagedType.LPStr)] string eventName,
            ScriptEventCallback callback, IntPtr userData);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Script_PublishEvent(
            IntPtr ctx,
            [MarshalAs(UnmanagedType.LPStr)] string eventName,
            IntPtr payload, int payloadSize);

        #endregion

        #region Camera API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetPlayerEntity(IntPtr ctx, EntityId player);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetCameraTarget(IntPtr ctx, EntityId target);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_ClearCameraTarget(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetCameraPosition(IntPtr ctx, float worldX, float worldY);

        #endregion

        #region Overlay Rendering API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_OverlayClear(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_OverlayRect(
            IntPtr ctx, float wx, float wy, float w, float h, uint colourRGBA);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_OverlayPresent();

        #endregion

        #region Pathfinding API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Engine_FindPath(
            IntPtr ctx, int startX, int startY, int targetX, int targetY, int maxRange);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Engine_FindPathAdvanced(
            IntPtr ctx, int startX, int startY, int targetX, int targetY,
            int maxRange, EntityId tilemapLayer);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_FreeString(IntPtr str);

        #endregion

        #region Scene Management API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void SceneManager_SaveScene(
            IntPtr ctx, [MarshalAs(UnmanagedType.LPStr)] string path);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool SceneManager_LoadScene(
            IntPtr ctx, [MarshalAs(UnmanagedType.LPStr)] string path,
            out uint outPlayer, out float outPlayerX, out float outPlayerY, out uint outMainTilemap);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool SceneManager_LoadTilemap(
            IntPtr ctx, [MarshalAs(UnmanagedType.LPStr)] string path,
            float positionX, float positionY, out uint outTilemap);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool SceneManager_SaveTilemap(
            IntPtr ctx, [MarshalAs(UnmanagedType.LPStr)] string path, uint tilemapEntity);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int SceneManager_GetSupportedFormatsCount(
            IntPtr ctx, [MarshalAs(UnmanagedType.I1)] bool forLoading);

        #endregion

        #region Scene Hierarchy API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern EntityId SceneHierarchy_CreateGameObject(
            IntPtr ctx, [MarshalAs(UnmanagedType.LPStr)] string name, EntityId parent);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int SceneHierarchy_SetParent(IntPtr ctx, EntityId child, EntityId parent);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int SceneHierarchy_GetChildren(
            IntPtr ctx, EntityId parent, [Out] uint[] outChildren, int maxCount);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern EntityId SceneHierarchy_GetParent(IntPtr ctx, EntityId child);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int SceneHierarchy_GetRootObjects(
            IntPtr ctx, [Out] uint[] outRoots, int maxCount);

        #endregion

        #region Selection API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Selection_SelectEntity(IntPtr ctx, EntityId entity);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Selection_AddToSelection(IntPtr ctx, EntityId entity);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Selection_DeselectAll(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Selection_GetSelectedEntities(
            IntPtr ctx, [Out] uint[] outEntities, int maxCount);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Selection_SelectInBounds(
            IntPtr ctx, float minX, float minY, float maxX, float maxY);

        #endregion

        #region Layer Management API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Layer_Create(IntPtr ctx, [MarshalAs(UnmanagedType.LPStr)] string name);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Layer_Remove(IntPtr ctx, int layerId);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Layer_SetVisible(IntPtr ctx, int layerId, int visible);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Layer_SetEntityLayer(IntPtr ctx, EntityId entity, int layerId);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Layer_GetEntityLayer(IntPtr ctx, EntityId entity);

        #endregion

        #region Command System API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Command_Execute(
            IntPtr ctx, [MarshalAs(UnmanagedType.LPStr)] string commandJson);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Command_Undo(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Command_Redo(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Command_CanUndo(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Command_CanRedo(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Command_GetUndoDescription(
            IntPtr ctx, [Out] byte[] outDescription, int bufferSize);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Command_GetRedoDescription(
            IntPtr ctx, [Out] byte[] outDescription, int bufferSize);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Command_GetHistorySize(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Command_SetMaxHistorySize(IntPtr ctx, int maxSize);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Command_ClearHistory(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Command_MoveSelection(IntPtr ctx, float deltaX, float deltaY);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Command_DeleteSelection(IntPtr ctx);

        #endregion

        #region Grid Operations API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Grid_SnapPosition(
            IntPtr ctx, float inX, float inY, out float outX, out float outY);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern float Grid_GetTileSize(IntPtr ctx);

        #endregion

        #region Coordinate Conversion API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Coord_WorldToTile(
            IntPtr ctx, float worldX, float worldY, out int outTileX, out int outTileY);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Coord_TileToWorld(
            IntPtr ctx, int tileX, int tileY, out float outWorldX, out float outWorldY);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern float Coord_GetTileSize(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Coord_SetTileSize(IntPtr ctx, float tileSize);

        #endregion

        #region Helper Methods

        /// <summary>Submit a sprite with default values</summary>
        public static void SubmitSprite(IntPtr ctx, uint textureID, float x, float y,
                                       float width, float height, RenderLayer layer = RenderLayer.Entities,
                                       int order = 0)
        {
            Render_SubmitSprite(ctx, textureID, x, y, width, height, 0f,
                               1f, 1f, 1f, 0f, 0f, 1f, 1f, (int)layer, order);
        }
